--- a/themes/twitter/layouts/default.html
+++ b/themes/twitter/layouts/default.html
@@ -6,7 +6,7 @@
   {{# page.description }}
     <meta name="description" content="{{ . }}">
   {{/ page.description }}
-    <meta name="author" content="{{ data.author.name }}">
+    <meta name="author" content="{{ site.author.name }}">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -14,8 +14,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    {{{ stylesheets.all }}}
-    {{{ javascripts.all }}}
+    {{{ assets }}} 
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -31,11 +30,11 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="{{urls.base_path}}">{{ data.title }}</a>
+          <a class="brand" href="/">{{ site.title }}</a>
           <ul class="nav">
-            {{# data.navigation?to_pages }}
+            {{# site.navigation?to_pages }}
               {{> pages_list }}
-            {{/ data.navigation?to_pages }}
+            {{/ site.navigation?to_pages }}
           </ul>
         </div>
       </div>
@@ -48,7 +47,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ data.author.name }} 2012 
+        <p>&copy; {{ site.author.name }} 2012 
           with help from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
@@ -56,7 +55,7 @@
 
     </div> <!-- /container -->
 
-    {{{ widgets.google_prettify }}}
-    {{{ widgets.analytics }}}
+    {{{ google_prettify }}}
+    {{{ analytics }}}
   </body>
 </html>
