--- a/themes/twitter/layouts/post.html
+++ b/themes/twitter/layouts/post.html
@@ -7,29 +7,31 @@ layout : default
 
 <div class="row">
   <div class="span8">
-    {{{ page.content }}}
+    {{{ content }}}
     <hr>
     <div class="pagination">
       <ul>
-        {{# page.previous }}
-          <li class="prev"><a href="{{ url }}" title="{{ title }}">&larr; Previous</a></li>
-        {{/ page.previous }}
-        {{^ page.previous }}
-          <li class="prev disabled"><a>&larr; Previous</a></li>
-        {{/ page.previous }}
+        <ul>
+          {{# page?previous }}
+            <li class="prev"><a href="{{ url }}" title="{{ title }}">&larr; Previous</a></li>
+          {{/ page?previous }}
+          {{^ page?previous }}
+            <li class="prev disabled"><a>&larr; Previous</a></li>
+          {{/ page?previous }}
 
-          <li><a href="{{urls.base_url}}archive">Archive</a></li>
+            <li><a href="/archive">Archive</a></li>
 
-        {{# page.next }}
-          <li class="next"><a href="{{ url }}" title="{{ title }}">Next &rarr;</a></li>
-        {{/ page.next }}
-        {{^ page.next }}
-          <li class="next disabled"><a>Next &rarr;</a>
-        {{/ page.next }}
+          {{# page?next }}
+            <li class="next"><a href="{{ url }}" title="{{ title }}">Next &rarr;</a></li>
+          {{/ page?next }}
+          {{^ page?next }}
+            <li class="next disabled"><a>Next &rarr;</a>
+          {{/ page?next }}
+        </ul>
       </ul>
     </div>
     <hr>
-    {{{ widgets.comments }}}
+    {{{ comments }}}
   </div>
   
   <div class="span4">
@@ -38,16 +40,16 @@ layout : default
     <br>
     <h4>Categories</h4>
     <ul class="tag_box">
-    {{# page.categories }}
+    {{# page.categories?to_categories }}
       {{> categories_list }}
-    {{/ page.categories }}
+    {{/ page.categories?to_categories }}
     </ul>
     <br>
     <h4>Tags</h4>
     <ul class="tag_box">
-    {{# page.tags }}
+    {{# page.tags?to_tags }}
       {{> tags_list }}
-    {{/ page.tags }}
+    {{/ page.tags?to_tags }}
     </ul>
   </div>
 </div>
